# bootloader-efi

./: .gitmodules  Cargo.toml  Makefile
src/: display.rs  lib.rs  main.rs  mem.rs  panic.rs  rt.rs  text.rs
src/app/: mod.rs  paging.rs
src/app/redoxfs/: disk.rs  filesystem.rs  mod.rs  node.rs
src/arch/aarch64/: mod.rs
src/arch/x86_64/: mod.rs  paging.rs
src/image/: bmp.rs  mod.rs
src/loader/: memory_map.rs  mod.rs  paging.rs  vesa.rs
src/loader/redoxfs/: disk.rs  filesystem.rs  node.rs
src/redoxfs/: filesystem.rs  node.rs
