[package]
name = "redox_bootloader"
version = "0.1.0"
edition = "2018"

[profile.release]
lto = true

[dependencies]
redox_uefi = "0.1.0"
redox_uefi_std = "0.1.4"
rlibc = "1.0"

[target."x86_64-unknown-uefi".dependencies]
x86 = "0.34.0"

[dependencies.orbclient]
git = "https://gitlab.redox-os.org/redox-os/orbclient.git"
branch = "no_std"
features = ["no_std"]

[dependencies.goblin]
version = "0.3.0"
default-features = false
features = ["elf64"]
