[package]
name = "redox_bootloader"
version = "0.1.0"
edition = "2018"

[profile.release]
lto = true

[dependencies]
redox_syscall = "0.2.10"
redox_uefi = "0.1.2"
redox_uefi_std = "0.1.5"
redoxfs = { version = "0.4.4", default-features = false }

[target."x86_64-unknown-uefi".dependencies]
x86 = "0.43.0"

[dependencies.orbclient]
git = "https://gitlab.redox-os.org/redox-os/orbclient.git"
branch = "no_std"
features = ["no_std"]
